fix (global styles): changed wrong height and changed the width of trigger button on dropdown

--- a/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-md-icon-selector/dot-md-icon-selector.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/view/components/_common/dot-md-icon-selector/dot-md-icon-selector.component.scss
@@ -44,7 +44,7 @@ dot-material-icon-picker {
 
             mwc-icon {
                 font-size: $font-size-xl;
-                width: 2.1875rem;
+                width: $field-height;
             }
         }
 
